<resources>
    <string name="app_name">Wave</string>
    <string name="_7u">7U LLC</string>
    <string name="from">From</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">New In Wave ? </string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="create_an_account">Create An Account</string>
    <string name="chat">Chat</string>
    <string name="meme">Meme</string>
    <string name="profile">Profile</string>
    <string name="msg_box_hint">Enter Your Message Here</string>
    <string name="update">Update</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="log_out">Log Out</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="getting_your_name">Getting Your Name…</string>
    <string name="wait_gmail_com">wait@gmail.com</string>
    <string name="please_wait">Please Wait...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="temp_phone_number">+910000000000</string>
    <string name="_7u_meme">7U Meme</string>
    <string name="general">General</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="settings">Settings</string>
    <string name="verify">Verify</string>
    <string name="new_password">New Password</string>

</resources>