<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/chatMenu"
                    android:icon="@drawable/ic_baseline_chat"
                    android:title="@string/chat" />

                <item
                    android:id="@+id/profileMenu"
                    android:icon="@drawable/ic_baseline_profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/settingsMenu"
                    android:icon="@drawable/ic_baseline_settings"
                    android:title="@string/settings" />

            </group>
        </menu>
    </item>

    <item android:title="@string/meme">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/memeMenu"
                    android:icon="@drawable/ic_baseline_meme"
                    android:title="@string/meme" />

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/logOutMenu"
        android:icon="@drawable/ic_baseline_log_out"
        android:title="@string/log_out" />
</menu>