<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3549C8"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userDrawerDp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/profile_icon2"
            app:civ_border_color="#FFFF00"
            app:civ_border_width="2.5dp" />

        <ImageView
            android:id="@+id/editIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/edit_profile"
            android:src="@drawable/ic_edit"
            app:tint="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/userDrawerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/spartan_bold"
        android:gravity="start"
        android:text="@string/getting_your_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userDrawerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:text="@string/temp_phone_number"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/userDrawerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:text="@string/wait_gmail_com"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_check" />

</LinearLayout>